2007-03-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/effects.py:
	* pitivi/elements/singledecodebin.py:
	* pitivi/elements/smartscale.py:
	* pitivi/instance.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/signalgroup.py:
	* pitivi/sourcelist.py:
	* pitivi/timeline/composition.py:
	* pitivi/timeline/objects.py:
	* pitivi/timeline/source.py:
	* pitivi/timeline/timeline.py:
	* pitivi/ui/complexinterface.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/glade.py:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/infolayer.py:
	* pitivi/ui/layerwidgets.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/plumber.py:
	* pitivi/ui/projectsettings.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/tracklayer.py:
	* pitivi/ui/viewer.py:
	Remove trailing whitespaces by using reindent.py script.

2007-03-06  Edward Hervey  <edward@fluendo.com>

	Patch by: Brandon Lewis <brandon_lewis@berkeley.edu>

	* pitivi/playground.py:
	* pitivi/ui/viewer.py:
	Implement frame-by-frame forward/backward seeking in the playground
	and in the UI.
	Brandon, welcome to the PiTiVi developer team :)
	Fixes #353857

2007-03-06  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Properly implement the getSettings method in SmartTimelineBin and
	SmartFileBin.
	* pitivi/objectfactory.py:
	Cache the result of FileSourceFactory.getExportSettings() so we don't
	calculate it every time it's being asked.

2007-02-18  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Removed checking for runtime-dependencies. Maintainers should make sure
	they are correctly set when packaging.
	Fixes #406341

2007-02-11  Edward Hervey  <edward@fluendo.com>

	* pitivi/check.py:
	* pitivi/configure.py.in:
	Moved all checks (including version checks) to runtime checking.
